--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
         @keyframes rotate-to-landscape { 0%, 100% { transform: rotate(0deg); } 50% { transform: rotate(-90deg); } }
         #orientationOverlay .message { color:#fff; font-size:18px; font-family:Arial,Helvetica,sans-serif; text-align:center; line-height:1.4; max-width:280px; }
         /* ปุ่มเต็มจอบนมือถือ */
-        #fullscreenBtn { display:none; position:fixed; bottom:12px; right:12px; z-index:9998; padding:10px 14px; background:rgba(0,0,0,0.6); color:#fff; border:1px solid rgba(255,255,255,0.4); border-radius:8px; font-size:14px; font-family:Arial,Helvetica,sans-serif; cursor:pointer; -webkit-tap-highlight-color:transparent; }
+        #fullscreenBtn { display:none; position:fixed; bottom:calc(20px + env(safe-area-inset-bottom, 0px)); right:calc(20px + env(safe-area-inset-right, 0px)); z-index:10000; padding:12px 18px; min-height:44px; min-width:44px; background:rgba(0,0,0,0.75); color:#fff; border:1px solid rgba(255,255,255,0.5); border-radius:8px; font-size:15px; font-family:Arial,Helvetica,sans-serif; cursor:pointer; -webkit-tap-highlight-color:transparent; pointer-events:auto; touch-action:manipulation; user-select:none; box-sizing:border-box; }
         #fullscreenBtn.mobile-visible { display:block; }
     </style>
     <link rel="stylesheet" href="fonts.css?v=1771987395974">
@@ -71,11 +71,23 @@
                 if (fullscreenBtn && isMobile()) fullscreenBtn.classList.add('mobile-visible');
             }
         }
+        function isIOS() { return /iPad|iPhone|iPod/.test(navigator.userAgent) || (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1); }
         function requestFullscreen() {
             var doc = document.documentElement;
-            if (doc.requestFullscreen) doc.requestFullscreen();
+            if (doc.requestFullscreen) doc.requestFullscreen().catch(function(){});
             else if (doc.webkitRequestFullscreen) doc.webkitRequestFullscreen();
             else if (doc.msRequestFullscreen) doc.msRequestFullscreen();
+            if (isIOS()) showFullscreenTip();
+        }
+        function showFullscreenTip() {
+            var tip = document.getElementById('fullscreenTip');
+            if (tip) return;
+            tip = document.createElement('div');
+            tip.id = 'fullscreenTip';
+            tip.style.cssText = 'position:fixed;left:50%;top:50%;transform:translate(-50%,-50%);z-index:10001;background:rgba(0,0,0,0.9);color:#fff;padding:16px 20px;border-radius:12px;font-size:14px;text-align:center;max-width:280px;line-height:1.5;pointer-events:auto;';
+            tip.textContent = 'บน iPhone: ใช้ แชร์ \u2794 เพิ่มไปที่หน้าจอหลัก แล้วเปิดจากไอคอน เพื่อเล่นเต็มจอ';
+            document.body.appendChild(tip);
+            setTimeout(function(){ if (tip.parentNode) tip.parentNode.removeChild(tip); }, 5000);
         }
         function exitFullscreen() {
             if (document.exitFullscreen) document.exitFullscreen();
@@ -91,10 +103,17 @@
             fullscreenBtn.setAttribute('aria-label', fullscreenBtn.textContent);
         }
         if (fullscreenBtn) {
-            fullscreenBtn.addEventListener('click', function() {
+            function doFullscreenToggle(e) {
+                if (e) { e.preventDefault(); e.stopPropagation(); }
                 if (isFullscreen()) exitFullscreen();
                 else requestFullscreen();
-            });
+            }
+            fullscreenBtn.addEventListener('click', function(e) { doFullscreenToggle(e); });
+            fullscreenBtn.addEventListener('touchend', function(e) {
+                e.preventDefault();
+                e.stopPropagation();
+                doFullscreenToggle();
+            }, { passive: false });
             document.addEventListener('fullscreenchange', updateFullscreenBtn);
             document.addEventListener('webkitfullscreenchange', updateFullscreenBtn);
             document.addEventListener('MSFullscreenChange', updateFullscreenBtn);
